# IP101

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README_EN.md  build.py  requirements.txt  setup.py  setup_gui_deps.bat  setup_gui_deps.sh
cmake/: FindGLFW.cmake  FindImGui.cmake  IP101Config.cmake.in  ThirdPartyDependencies.cmake
cpp/: CMakeLists.txt
cpp/advanced/: CMakeLists.txt
cpp/advanced/advanced_filtering/: CMakeLists.txt  guided_filter.cpp  homomorphic_filter.cpp  homomorphic_filter.hpp  side_window_filter.cpp  side_window_filter.hpp
cpp/advanced/image_correction/: CMakeLists.txt  auto_level.cpp  auto_level.hpp  automatic_white_balance.cpp  automatic_white_balance.hpp  backlight.cpp  backlight.hpp  gamma_correction.cpp  illumination_correction.cpp
cpp/advanced/image_defogging/: CMakeLists.txt  dark_channel.cpp  dark_channel.hpp  fast_defogging.cpp  fast_defogging.hpp  guided_filter.cpp  guided_filter_dehazing.cpp  median_filter.cpp  realtime_dehazing.cpp
cpp/advanced/image_effects/: CMakeLists.txt  cartoon_effect.cpp  cartoon_effect.hpp  motion_blur.cpp  motion_blur.hpp  oil_painting_effect.cpp  oil_painting_effect.hpp  skin_beauty.cpp  spherize.cpp  spherize.hpp  unsharp_masking.cpp  vintage_effect.cpp
cpp/advanced/image_enhancement/: CMakeLists.txt  adaptive_logarithmic_mapping.cpp  automatic_color_equalization.cpp  automatic_color_equalization.hpp  hdr.cpp  multi_scale_detail_enhancement.cpp  multi_scale_detail_enhancement.hpp  real_time_adaptive_contrast.cpp  retinex_msrcr.cpp  retinex_msrcr.hpp
cpp/advanced/special_detection/: CMakeLists.txt  color_cast_detection.cpp  color_cast_detection.hpp  license_plate_detection.cpp  rectangle_detection.cpp  rectangle_detection.hpp
cpp/basic/: CMakeLists.txt  README.md  README_EN.md  color_operations.cpp  color_operations_test.cpp  connected_components.cpp  connected_components.hpp  connected_components_test.cpp  edge_detection.cpp  edge_detection.hpp  edge_detection_test.cpp  feature_extraction.cpp  feature_extraction.hpp  feature_extraction_test.cpp  filtering.cpp  filtering.hpp  filtering_test.cpp  frequency_domain.cpp  frequency_domain.hpp  frequency_domain_test.cpp  image_compression.cpp  image_compression.hpp  image_compression_test.cpp  image_enhancement.cpp  image_enhancement.hpp  image_features.cpp  image_features.hpp  image_inpainting.cpp  image_inpainting.hpp  image_inpainting_test.cpp  image_matching.cpp  image_matching.hpp  image_matching_test.cpp  image_pyramid.cpp  image_pyramid.hpp  image_pyramid_test.cpp  image_quality.cpp  image_quality.hpp  image_quality_test.cpp  image_segmentation.cpp  (+20 more)
docs/optimization/: openmp_guide.md  performance_analysis.md  simd_guide.md
docs/tutorials/: advanced_topics.md  getting_started.md
examples/: CMakeLists.txt  basic_example.cpp  system_info_demo.cpp
examples/advanced/: CMakeLists.txt  COMPLETION_SUMMARY.md  CURRENT_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  README.md  adaptive_logarithmic_mapping_test.cpp  auto_level_test.cpp  automatic_color_equalization_test.cpp  automatic_white_balance_test.cpp  backlight_test.cpp  cartoon_effect_test.cpp  color_cast_detection_test.cpp  dark_channel_test.cpp  fast_defogging_test.cpp  gamma_correction_test.cpp  guided_filter_dehazing_test.cpp  guided_filter_test.cpp  hdr_test.cpp  homomorphic_filter_test.cpp  illumination_correction_test.cpp  license_plate_detection_test.cpp  median_filter_test.cpp  motion_blur_test.cpp  multi_scale_detail_enhancement_test.cpp  oil_painting_effect_test.cpp  quick_test_advanced.bat  real_time_adaptive_contrast_test.cpp  realtime_dehazing_test.cpp  rectangle_detection_test.cpp  retinex_msrcr_test.cpp  side_window_filter_test.cpp  skin_beauty_test.cpp  spherize_test.cpp  unsharp_masking_test.cpp  vintage_effect_test.cpp
examples/basic/: CMakeLists.txt  color_operations_test.cpp  connected_components_test.cpp  edge_detection_test.cpp  feature_extraction_test.cpp  filtering_test.cpp  frequency_domain_test.cpp  image_compression_test.cpp  image_enhancement_test.cpp  image_features_test.cpp  image_inpainting_test.cpp  image_matching_test.cpp  image_pyramid_test.cpp  image_quality_test.cpp  image_segmentation_test.cpp  image_transform_test.cpp  morphology_test.cpp  object_detection_test.cpp  super_resolution_test.cpp  texture_analysis_test.cpp  thinning_test.cpp
gui/: CHANGELOG.md  CMakeLists.txt  README.md  main_gui.cpp  quick_start.bat  quick_start.sh  setup_dependencies.py  setup_git_submodules.bat  setup_git_submodules.py  simple_gui.cpp
include/basic/: color_operations.hpp  connected_components.hpp  edge_detection.hpp  feature_extraction.hpp  filtering.hpp  frequency_domain.hpp  image_compression.hpp  image_enhancement.hpp  image_features.hpp  image_inpainting.hpp  image_matching.hpp  image_pyramid.hpp  image_quality.hpp  image_segmentation.hpp  image_transform.hpp  morphology.hpp  object_detection.hpp  super_resolution.hpp  texture_analysis.hpp  thinning.hpp
python/: system_info.py  system_info_demo.py
python/advanced/: adaptive_logarithmic_mapping.py  auto_level_adjustment.py  automatic_color_equalization.py  automatic_white_balance.py  backlight_correction.py  cartoon_effect.py  color_cast_detection.py  dark_channel_dehazing.py  fast_defogging.py  gamma_correction.py  guided_filter.py  guided_filter_dehazing.py  hdr.py  homomorphic_filter.py  license_plate_detection.py  median_filter_defogging.py  motion_blur_effect.py  multi_scale_detail_enhancement.py  oil_painting_effect.py  real_time_adaptive_contrast.py  realtime_dehazing.py  rectangle_detection.py  retinex_msrcr.py  side_window_filter.py  skin_beauty.py  spherize_effect.py  unsharp_masking.py  vintage_effect.py
python/basic/: color_operations.py  connected_components.py  edge_detection.py  feature_extraction.py  filtering.py  frequency_domain.py  image_compression.py  image_enhancement.py  image_features.py  image_inpainting.py  image_matching.py  (+10 more)
tests/: CMakeLists.txt
utils/: CMakeLists.txt  image_loader.hpp  quick_test.hpp  system_info.cpp  system_info.hpp
(+65 files in other folders)
